# valence-extra

./: Cargo.toml  flake.nix
crates/schematics/: Cargo.toml
crates/schematics/src/: block_entity.rs  block_entity_data.rs  decode.rs  lib.rs
examples/: schematics.rs
examples/assets/: cabaret-t5.schem  cabaret-t5.schematics.nbt  italicbase.nbt  unzipcabaret.schem
